# shine

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  appveyor.yml  build.rs  rustfmt.toml  tatus
Unity/: Cargo.toml
Unity/Shine/ProjectSettings/: ProjectSettings.asset
Unity/src/: lib.rs  voxel.rs
crates/shine/: Cargo.toml
crates/shine-gltf/: Cargo.toml
crates/shine-gltf/src/: accessor.rs  buffer.rs  material.rs  root.rs  skin.rs  texture.rs
crates/shine-graph/: Cargo.toml
crates/shine-graph/src/: join.rs  traits.rs
crates/shine-graph/tests/: smat.rs
crates/shine-input/: Cargo.toml
crates/shine-input/src/: manager.rs  mapping.rs  modifiermask.rs
crates/shine-shard/: Cargo.toml
crates/shine-stdext/: Cargo.toml
crates/shine-stdext/src/: lib.rs  unnamedstore.rs
crates/shine-stdext/tests/: stdext.rs
crates/shine/src/: input.rs
ecs/: Cargo.toml
ecs-macro/: Cargo.toml
ecs-macro/src/: lib.rs
ecs/src/: bitset.rs  builder.rs  component.rs  componentcontainer.rs  edge.rs  edgecomponent.rs  entity.rs  entitycomponent.rs  entitylink.rs  iterator.rs  join.rs  lib.rs  link.rs  linkcontainer.rs  linkrawcontainer.rs  maskedcomponentcontainer.rs  resources.rs  scope.rs  storagecategory.rs  storagelike.rs  system.rs  uncheckedcomponentcontainer.rs  utils.rs  world.rs
ecs/src/entities/: edge.rs  edgebuilder.rs  edgecomponent.rs  entity.rs  entitybuilder.rs  entitycomponent.rs  mod.rs  storage.rs
ecs/src/resources/: named.rs  unnamed.rs
ecs/tests/: component.rs  edgecomponent.rs  entitycomponent.rs  entitystore.rs  system.rs  world.rs
engine/: Cargo.toml  build.rs
engine/src/: lib.rs
engine/src/container/: arena.rs  hashmaparena.rs  mod.rs  ops.rs  store.rs
engine/src/render/: commandqueue.rs  engine.rs  indexbuffer.rs  indexsource.rs  mod.rs  passmanager.rs  rendermanager.rs  renderpass.rs  renderpassconfig.rs  shaderprogram.rs  texture2d.rs  texture2dsource.rs  types.rs  vertexbuffer.rs  vertexsource.rs  window.rs  windowsettings.rs
engine/src/world/: imagestore.rs  mod.rs
engine/tests/: arena.rs  spsc.rs  store.rs
gltf/: Cargo.toml
gltf-macro/: Cargo.toml
gltf-macro/src/: lib.rs
gltf/src/: accessor.rs  animation.rs  asset.rs  buffer.rs  camera.rs  image.rs  lib.rs  material.rs  mesh.rs  path.rs  root.rs  scene.rs  skin.rs  texture.rs  validation.rs
gltf/src/extensions/: accessor.rs  asset.rs  buffer.rs  image.rs  material.rs  mesh.rs  mod.rs  root.rs  scene.rs  texture.rs
gltf/tests/: test_validation.rs
graph/: Cargo.toml
graph-macro/: Cargo.toml
graph-macro/src/: bitops.rs  exclusiveaccess_tuple.rs  indexexcl_tuple.rs  indexlowerbound_tuple.rs  intojoin_tuple.rs  intomaskedjoin_tuple.rs  intomergedjoin_tuple.rs  intovectorjoin.rs  intovectorjoin_tuple.rs  intovectormerge_tuple.rs  joinable.rs  lib.rs  storeaccess.rs  storeview.rs  vectorjoinstore.rs  vectorstore.rs
graph/src/: bitmask.rs  bitset.rs  bitsetlike.rs  csmat.rs  join.rs  lib.rs  sparsevector.rs  traits.rs  vectormask.rs  vectorstore.rs
graph/src/bits/: bitblock.rs  bitconst.rs  bititer.rs  bitops.rs  bitset.rs  bitsetlike.rs  bitsetview.rs  mod.rs
graph/src/bitset/: bitconst.rs  bititer.rs  bitops.rs  bitset.rs  bitsetlike.rs  mod.rs  ops.rs
graph/src/ops/: intovectorjoin.rs  join.rs  jvector.rs  maskedjoin.rs  mergedjoin.rs  mod.rs  store.rs  vectorjoin.rs  vectormerge.rs
graph/src/smat/: arenastore.rs  csindexmask.rs  csmat.rs  csmatarena.rs  csmatlike.rs  csmatrix.rs  csmatrixmask.rs  csmatvec.rs  dataiter.rs  densestore.rs  entry.rs  hcsindexmask.rs  hcsmatrix.rs  hcsmatrixmask.rs  join.rs  joiniter.rs  matrixmask.rs  mod.rs  rowiter.rs  smatrices.rs  smatrix.rs  smatrixiter.rs  sparseamatrix.rs  sparsedmatrix.rs  sparsematrix.rs  store.rs  unitstore.rs
graph/tests/: bitset.rs  csmat.rs  join.rs  matrixjoin.rs  smat.rs  svec.rs  vectorjoin.rs  vectormaskedjoin.rs  vectormatrixjoin.rs  vectormerge.rs  vectormergedjoin.rs
input/: Cargo.toml
input/src/: lib.rs  state.rs
math/: Cargo.toml
math/src/: lib.rs
math/tests/: geom_predicates.rs  tri_constraint.rs  tri_debug.rs  tri_points.rs  tri_quickcheck.rs  tri_regression.rs  voxel_polygonize.rs
render/: Cargo.toml
render-core/: Cargo.toml
render-core/src/: error.rs  lib.rs  types.rs
render-gl/: Cargo.toml  build.rs
render-gl/src/: lib.rs
render-gl/tests/: fun.glsl  hello.rs  ib.rs  img.raw  ll.rs
render/src/: commandqueue.rs  engine.rs  error.rs  indexbuffer.rs  indexsource.rs  keycodes.rs  lib.rs  ops.rs  rendermanager.rs  renderpass.rs  renderpassconfig.rs  resources.rs  shaderprogram.rs  stub.rs  texture2d.rs  texture2dsource.rs  types.rs  vertexbuffer.rs  vertexsource.rs  window.rs  windowsettings.rs
render/tests/: basicpipeline.rs  deriveglshaderdecl.rs  deriveglshaderdeclaration.rs  derivevertexdecl.rs  derivevertexdeclaration.rs  stub.rs
shard/: Cargo.toml
store/: Cargo.toml
store/src/: arena.rs  fjcommandqueue.rs  fjsqueue.rs  handlestore.rs  hashstore.rs  indexedarena.rs  lib.rs  mod.rs  mpscfjqueue.rs  namedstore.rs  ops.rs  pinnedarena.rs  spscstate.rs  stablearena.rs  store.rs  threadid.rs  unnamedstore.rs
store/tests/: fjsqueue.rs  hashstore.rs  indexedarena.rs  namedstore.rs  spsc.rs  spscstate.rs  stdext.rs  store.rs  threadid.rs  unnamedstore.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
testutils/templates/: controls.html  d2.html  d2view.html  d3view.html
testutils/tests/: d2.rs  d3.rs
testutils/tmp/: package-lock.json
testutils/www/: d2.html  index.html
tri/: Cargo.toml
tri/examples/: quickcheck.rs
tri/src/: builder.rs  checker.rs  context.rs  d2trace.rs  geometry.rs  graph.rs  indexing.rs  inexactgeometry.rs  lib.rs  locator.rs  orientationquery.rs  query.rs  simplegraph.rs  tagginglocator.rs  trace.rs  triangulation.rs  types.rs  vertexchain.rs
tri/templates/: image.html
tri/tests/: common.rs  constraint.rs  debug.rs  inexactgeometry.rs  points.rs  predicates.rs  quickcheck.rs  regression.rs  simple.rs  simpleconstraint.rs  simplepoints.rs
world/: Cargo.toml
world/src/: imagestore.rs  lib.rs
(+511 files in other folders)
