[package]
name = "shine"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "General purpose multi-threaded sanbox engine."
repository = "https://github.com/gzp/shine"
keywords = ["component system", "game"]
edition = "2018"

[workspace]
members = [ "testutils", "utils", "graph", "graph-macro", "gltf", "gltf-macro", "ecs", "ecs-macro", "math", "input" ]

[features]
alma = []
render-dx12 = ["rendy/dx12"]
render-vulkan = ["rendy/vulkan"]
default = ["render-vulkan"]

[dependencies]
log = "*"
env_logger = "*"
failure = "*"
lazy_static = "*"

nalgebra = "*"
nalgebra-glm = "*"

gfx-hal = {version = "*"}
winit = "0.18"
gilrs = "*"
rendy = {git = "https://github.com/omni-viral/rendy.git"}

crossbeam = "*"
rayon = "*"
shred = "*"

shine-utils = {path = "utils"}
shine-graph = {path = "graph"}
shine-math = {path = "math"}
shine-gltf = {path = "gltf"}
shine-ecs = {path = "ecs"}
shine-input = {path = "input"}
