[package]
name = "shine-unity"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Unity binding."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[lib]
name = "shine"
crate-type = ["dylib"]

[dependencies]
shine-math = {path = "../math"}