[package]
name = "shine-ecs-macro"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros for the shine-ecs crate"
repository = "https://github.com/gzp/shine"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "*"
proc-macro2 = "*"
syn = "*"
