[package]
name = "shine-ecs"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Entity component system module of a general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
log = "*"
shred = "*"
itertools = "*"

shine-graph = {path = "../graph"}
shine-store = {path = "../store"}

[dev-dependencies]
env_logger = "*"
shine-testutils = {path = "../testutils"}