[package]
name = "dragorust-engine"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "0.5"

[dependencies]
dragorust-render-derive = {path = "../render-derive"}

libc = "*"
gl = "*"
arrayvec = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
shell32-sys = "0.1"
gdi32-sys = "0.1"
user32-sys = "~0.1.2"
kernel32-sys = "0.2"
dwmapi-sys = "0.1"
