[package]
name = "shine-graph"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Graph and sparse matrix library for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["graph", "matrix", "spares"]
edition = "2018"

[dependencies]
libc = "*"
log = "*"
lazy_static = "*"
num-traits = "*"
arrayvec = "*"

shine-utils = {path = "../utils"}
shine-graph-macro = {path = "../graph-macro"}

[dev-dependencies]
env_logger = "*"
rand = "*"
permutohedron = "*"
shine-testutils = {path = "../testutils"}
