[package]
name = "shine-input"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Input handling for the shine engine."
repository = "https://github.com/gzp/shine"
keywords = ["input", "gamepad", "controller", "guestures"]
edition = "2018"

[dependencies]
log = "*"
env_logger = "*"
failure = "*"
lazy_static = "*"

gilrs = "*"
winit = "0.18"
