[package]
name = "shine-math"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. General math and geometry module for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "geometry", "triangulation", "voxel"]


[dependencies]
log = "*"
rand = "*"

[dev-dependencies]
env_logger = "*"
quickcheck = "*"
shine-testutils = {path = "../testutils"}