[package]
name = "shine-math"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Math module for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "geometry", "triangulation", "voxel"]
edition = "2018"

[dependencies]
log = "*"
rand = "*"
alga = "*"
nalgebra = "*"
num-traits = "*"
nalgebra-glm = "*"

[dev-dependencies]
env_logger = "*"
quickcheck = "*"
shine-testutils = {path = "../testutils"}