[package]
name = "shine-render-core"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]

[dependencies]
shine-store = {path = "../store"}
shine-render-derive = {path = "../render-derive"}

libc = "*"
image = { version = "*", optional = true }
nalgebra = { version = "*", optional = true }

[features]
default = ["image", "nalgebra"]

