[package]
name = "shine-render-core"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
shine-store = {path = "../store", version = "0.1"}
shine-render-derive = {path = "../render-derive", version = "0.1"}

libc = "*"
image = { version = "*", optional = true }
nalgebra = { version = "*", optional = true }

[features]
default = ["image", "nalgebra"]

