[package]
name = "shine-render-gl"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "*"

[dependencies]
shine-store = {path = "../store"}
shine-render-core = {path = "../render-core"}

libc = "*"
arrayvec = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "*"
shell32-sys = "*"
gdi32-sys = "*"
user32-sys = "*"
kernel32-sys = "*"
dwmapi-sys = "*"
