[package]
name = "shine-render-gl"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"

[build-dependencies]
gl_generator = "*"

[dependencies]
shine-store = {path = "../store", version = "0.1"}
shine-render-core = {path = "../render-core", version = "0.1"}

libc = "*"
arrayvec = "*"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = ["winuser", "libloaderapi", "winbase"]
