[package]
name = "shine-render-gl"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"

[build-dependencies]
gl_generator = "*"

[dependencies]
shine-store = {path = "../store"}
shine-render-core = {path = "../render-core"}
shine-render-gl-derive = {path = "../render-gl-derive"}

libc = "*"
arrayvec = "*"
time = "*"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = ["winuser", "libloaderapi", "winbase"]
