[package]
name = "shine-render"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
shine-store = {path = "../store"}
shine-render-core = {path = "../render-core"}
shine-render-gl = {path = "../render-gl"}
shine-render-gl-derive = {path = "../render-gl-derive"}

libc = "*"
image = "*"
