[package]
name = "shine-store"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Storage and container module of a general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
libc = "*"
log = "*"
lazy_static = "*"
num_cpus="*"

[dev-dependencies]
env_logger = "*"
rand = "*"
permutohedron = "*"
shine-testutils = {path = "../testutils"}