[package]
name = "shine-testutils"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Storage and container module of a general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]

[dependencies]
log = "*"
env_logger = "*"

serde = "*"
serde_json = "*"
tera =  "*"
futures = "*"
actix =  "*"
#actix-web =  "*"
actix-web = {git = "https://github.com/zpgaal/actix-web", branch = "issue_586"}

svg =  "*"
gltf-json = {version = "*", features = ["extras", "names"]}
