[package]
name = "shine-testutils"
version = "0.1.1"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Storage and container module of a general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
log = "*"
env_logger = "*"

serde = "*"
serde_json = "*"
bytes = "*"
base64 = "*"
tera =  "*"
futures = "*"

actix-rt = "0.2"
actix-web = "1.0.0-beta"
actix-files = "0.1.0-beta"
actix-session = "0.1.0-beta"

svg =  "*"
shine-gltf = {path = "../gltf"}
