[package]
name = "shine-testutils"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Storage and container module of a general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"

serde = "1.0"
serde_json = "1.0"
bytes = "0.4"
base64 = "0.10"
tera =  "0.11"
futures = "0.1"

actix-rt = "0.2"
actix-web = "1.0.0-beta"
actix-files = "0.1.0-beta"
actix-session = "0.1.0-beta"

svg =  "0.5"
shine-gltf = {path = "../gltf"}
