[package]
name = "shine-tri"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Robust triangulation module for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "triangulation", "robust"]

[dependencies]
log = "*"
rand = "*"

[dev-dependencies]
env_logger = "*"
shine-testutils = {path = "../testutils"}