[package]
name = "shine-tri"
version = "0.1.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Robust triangulation module for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "triangulation", "robust"]

[features]
default = ["debug_service"]
debug_service = ["svg", "actix", "actix-web"]


[dependencies]
log = "*"
rand = "*"

svg = {version = "*", optional = true}
actix = {version = "*", optional = true}
actix-web = {version = "*", optional = true}

[dev-dependencies]
env_logger = "*"
quickcheck = "*"
shine-testutils = {path = "../testutils"}