[package]
name = "shine-gltf"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "JSON parsing for the gltf crate based on https://github.com/gltf-rs/gltf"
repository = "https://github.com/gzp/shine"
keywords = ["gltf", "mesh", "exporter", "importer"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

shine-gltf-macro = {path = "../shine-gltf-macro", version = "0.2.0"}

[features]
default = []
KHR_materials_pbrSpecularGlossiness = []
