[package]
name = "shine-graph"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Graph and sparse matrix library for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["graph", "matrix", "spares"]
edition = "2018"

[dependencies]
libc = "0.2"
log = "0.4"
lazy_static = "1.3"
num-traits = "0.2"
arrayvec = "0.4"

shine-stdext = {path = "../shine-stdext", version = "0.2.0"}
shine-graph-macro = {path = "../shine-graph-macro", version = "0.2.0"}

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
permutohedron = "0.2"
shine-testutils = {path = "../shine-testutils", version = "0.2.0"}
