[package]
name = "shine-input"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Input handling for the shine engine."
repository = "https://github.com/gzp/shine"
keywords = ["input", "gamepad", "controller", "guestures"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
failure = "0.1"
lazy_static = "1.3"

gilrs = "0.7"
winit = "0.19"
