[package]
name = "shine-shard"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. Common component building blocks for the shine engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
log = "0.4"

alga = "0.9"
nalgebra = "0.18"

shine-graph = {path = "../shine-graph", version = "0.2.0"}
shine-stdext = {path = "../shine-stdext", version = "0.2.0"}
shine-ecs = {path = "../shine-ecs", version = "0.2.0"}
shine-ecs-macro = {path = "../shine-ecs-macro", version = "0.2.0"}
shine-math = {path = "../shine-math", version = "0.2.0"}

[dev-dependencies]
env_logger = "0.6"
shine-testutils = {path = "../shine-testutils", version = "0.2.0"}