[package]
name = "shine-stdext"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SHINE. General utilities for the general purpose multi-threaded rendering engine."
repository = "https://github.com/zpgaal/shine"
keywords = ["shine", "render", "opengl", "game"]
edition = "2018"

[dependencies]
libc = "0.2"
log = "0.4"
lazy_static = "1.3"
num_cpus="1.10"

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
permutohedron = "0.2"
shine-testutils = {path = "../shine-testutils", version = "0.2.0"}