[package]
name = "shine"
version = "0.2.0"
authors = ["gzp <z.p.gaal.devel@gmail.com>"]
license = "MIT/Apache-2.0"
description = "General purpose multi-threaded sanbox engine."
repository = "https://github.com/gzp/shine"
keywords = ["component system", "game"]
edition = "2018"

[features]
alma = []
render-dx12 = ["rendy/dx12"]
render-vulkan = ["rendy/vulkan"]
default = ["render-vulkan"]

[dependencies]
log = "0.4"
env_logger = "0.6"
interact = "0.3"
interact_prompt = "0.3"
failure = "0.1"
lazy_static = "1.3"

nalgebra = "0.18"
nalgebra-glm = "0.4"

gfx-hal = "0.1"
winit = "0.18"
gilrs = "0.7"
rendy = {git = "https://github.com/omni-viral/rendy.git"}

parking_lot = "0.7"
crossbeam = "0.7"
rayon = "1.0"

shine-stdext = {path = "../shine-stdext", version = "0.2.0"}
shine-graph = {path = "../shine-graph", version = "0.2.0"}
shine-math = {path = "../shine-math", version = "0.2.0"}
shine-gltf = {path = "../shine-gltf", version = "0.2.0"}
shine-ecs = {path = "../shine-ecs", version = "0.2.0"}
shine-input = {path = "../shine-input", version = "0.2.0"}
shine-shard = {path = "../shine-shard", version = "0.2.0"}
